--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,31 +9,37 @@ android {
             storePassword 'adirocks'
         }
     }
-    compileSdkVersion 27
-    buildToolsVersion '27.0.3'
+    bundle
+            {
+                language {
+                    enableSplit = false
+                }
+            }
+    compileSdkVersion 29
     defaultConfig {
         applicationId "com.sample.androidgithubrepositories"
         minSdkVersion 16
-        targetSdkVersion 27
-        versionCode 17
-        versionName "3.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        targetSdkVersion 29
+        versionCode 27
+        versionName "6.0"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
             minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig  signingConfigs.config
+            signingConfig signingConfigs.config
         }
     }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
-    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.thoughtbot:expandablerecyclerview:1.3'
     implementation 'com.thoughtbot:expandablecheckrecyclerview:1.4'
@@ -43,9 +49,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:11.0.4'
     implementation 'com.github.jd-alexander:LikeButton:0.2.3'
     // Check for v11.4.2 or higher
- //   implementation 'com.google.firebase:firebase-core:11.0.4'
+    //   implementation 'com.google.firebase:firebase-core:11.0.4'
 
     // Add dependency
-   // implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
+    // implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
 }
 apply plugin: 'com.google.gms.google-services'
