--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'io.fabric'
 android {
     signingConfigs {
         config {
@@ -15,12 +14,14 @@ android {
                     enableSplit = false
                 }
             }
-    compileSdkVersion 29
+    compileSdkVersion 33
     defaultConfig {
         applicationId "com.sample.androidgithubrepositories"
-        minSdkVersion 16
-        targetSdkVersion 29
+        minSdkVersion 19
+        targetSdkVersion 33
         versionCode 27
+        multiDexEnabled true
+
         versionName "6.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -36,9 +37,9 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'androidx.appcompat:appcompat:1.0.0'
-    implementation 'com.google.android.material:material:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.1'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.thoughtbot:expandablerecyclerview:1.3'
@@ -46,8 +47,18 @@ dependencies {
     implementation 'com.codemybrainsout.onboarding:onboarder:1.0.4'
     implementation 'com.github.clans:fab:1.6.4'
     implementation 'io.github.kobakei:ratethisapp:1.2.0'
-    implementation 'com.google.android.gms:play-services-ads:11.0.4'
+    implementation 'com.google.android.gms:play-services-ads:22.2.0'
+    // Example dependency declaration
+    implementation 'androidx.multidex:multidex:2.0.1'
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.6.0" // Use the correct version here
+
     implementation 'com.github.jd-alexander:LikeButton:0.2.3'
+    implementation "com.google.android.play:integrity:1.2.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.1"
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation group: 'org.bitbucket.b_c', name: 'jose4j', version: '0.7.12'
+
     // Check for v11.4.2 or higher
     //   implementation 'com.google.firebase:firebase-core:11.0.4'
 
@@ -55,3 +66,4 @@ dependencies {
     // implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
 }
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'org.jetbrains.kotlin.android'
