--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
@@ -13,28 +14,48 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <meta-data android:name="google_analytics_adid_collection_enabled" android:value="false" />
-        <activity android:name=".CardView.MainActivity"
-            android:launchMode="singleTask">
-        </activity>
-        <activity android:name=".CustomListView.SecondActivity"></activity>
-        <activity android:name=".OpenGithubRepository.open_github_link"></activity>
-        <activity android:name=".ExpandableListView.Expandablelayout"></activity>
-        <activity android:name=".filemanager.FileChooser"></activity>
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-8861549201942078~4029520172"/>
+        <activity
+            android:name=".MainActivity2"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-        <receiver android:name=".Receiver.DownloadReceiver"  android:enabled="true" android:exported="true">
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <meta-data
+            android:name="google_analytics_adid_collection_enabled"
+            android:value="false" />
+
+        <activity
+            android:name=".CardView.MainActivity"
+            android:launchMode="singleTask"></activity>
+        <activity android:name=".CustomListView.SecondActivity" />
+        <activity android:name=".OpenGithubRepository.open_github_link" />
+        <activity android:name=".ExpandableListView.Expandablelayout" />
+        <activity android:name=".filemanager.FileChooser" />
+
+        <receiver
+            android:name=".Receiver.DownloadReceiver"
+            android:enabled="true"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.DOWNLOAD_COMPLETE" />
                 <action android:name="android.intent.action.DOWNLOAD_NOTIFICATION_CLICKED" />
                 <action android:name="android.intent.action.ACTION_VIEW_DOWNLOADS" />
                 <action android:name="android.intent.action.DATE_CHANGED" />
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
-                <action android:name="android.intent.action.QUICKBOOT_POWERON"/>
-                <!--For HTC devices-->
-                <action android:name="com.htc.intent.action.QUICKBOOT_POWERON"/>
+                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
+                <!-- For HTC devices -->
+                <action android:name="com.htc.intent.action.QUICKBOOT_POWERON" />
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
         </receiver>
+
         <provider
             android:name=".Search.RepositoriesSuggestionProvider"
             android:authorities="com.sample.androidgithubrepositories.repositorysuggesstion"
@@ -43,32 +64,40 @@
 
         <activity
             android:name=".Search.SearchResultsActivity"
+            android:exported="true"
             android:theme="@style/AppThemeWithActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
         <activity android:name=".Bookmarks.BookmarksActivity" />
-        <activity android:name=".onBoarding">
+       <!-- <activity
+            android:name=".onBoarding"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <!--<service
+        </activity>-->
+        <!--
+<service
             android:exported="false"
             android:name=".Receiver.ScheduledJobService">
             &lt;!&ndash;<intent-filter>
                 <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE"/>
             </intent-filter>&ndash;&gt;
-        </service>-->
-        <receiver android:name=".Bookmarks.AddBookMarkFromNotification">
+        </service>
+        -->
+        <receiver
+            android:name=".Bookmarks.AddBookMarkFromNotification"
+            android:exported="true">
             <intent-filter>
-                <action android:name="com.Bookmark.action"/>
+                <action android:name="com.Bookmark.action" />
             </intent-filter>
         </receiver>
     </application>
